--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "react-jsx",
-        "typeRoots": ["node_modules/@types", "src/types"]
+        "jsx": "react-jsx"
     },
-    "include": ["src"]
+    "include": ["src", "global.d.ts"]
 }
