--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,12 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
+        // "noUnusedLocals": true,
         "noEmit": true,
+        "incremental": true,
+        "declaration": true,
         "jsx": "react-jsx"
     },
-    "include": ["src", "global.d.ts"]
+    "include": ["src", "global.d.ts"],
+    "exclude": ["node_modules", "build"]
 }
