--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql-request": "^4.3.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-pagination": "^1.0.0",
     "react-query": "^3.39.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
